Fix about page overspill issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@
 	font-family: 'Averia Serif Libre', cursive;
 }
 
-a:hover{
-    color: #ffb7f1;
+a:hover {
+	color: #ffb7f1;
 }
 
 body {
@@ -295,72 +295,56 @@ input[type=submit] {
 
 /* Tour Text starts here */
 
-
-#tour img{
+#tour img {
 	height: 500px;
 	position: relative;
-    width: 100%;
+	width: 100%;
 }
 
 #tour-text {
 	color: white;
 	text-align: center;
-    position: absolute;
-    top: 170px;
-    
+	position: absolute;
+	top: 170px;
 }
 
 #tour-text h1 {
-	
 	font-size: 60px;
 	letter-spacing: 5px;
 }
 
 #tour-text p {
-	
 	font-size: 20px;
 	letter-spacing: 5px;
 }
 
 
-
 /* About starts here */
 
-#about{
-    height: auto;
+#about {
+	background-image: url(../img/background-4.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding-top: 10vh;
+	padding-bottom: 10vh;
 }
-
-#about img{
-	object-fit: contain;
-	position: relative;
-    width: 100%;
-}
-
-
-
 
 #about-text {
-    height: auto;
 	color: white;
 	text-align: left;
-    position: absolute;
-    top: 0;
-
-    
 }
 
 #about-text h1 {
-	top: 150px;
-	font-size: 45px;
+	margin-bottom: 30px;
+	font-size: 50px;
 	letter-spacing: 5px;
 }
 
 #about-text p {
-	top: 180px;
 	font-size: 19px;
 	letter-spacing: 5px;
 }
-
 
 @media screen and (max-width: 1199px) {
 	.critics-text {
@@ -373,16 +357,14 @@ input[type=submit] {
 		font-size: 30px;
 		margin-bottom: 30px;
 	}
-    
-    nav ul li a {
-	color: #ffffff;
-	font-weight: bold;
-	letter-spacing: 5px;
-	margin: 1vw;
-	font-size: 10px;
+	nav ul li a {
+		color: #ffffff;
+		font-weight: bold;
+		letter-spacing: 5px;
+		margin: 1vw;
+		font-size: 10px;
+	}
 }
-}
-
 
 @media screen and (max-width: 991px) {
 	/* Critics lg size section styling */
@@ -406,46 +388,20 @@ input[type=submit] {
 	h2 span {
 		font-size: 65px;
 	}
-    
-    
-/* About starts here */
-
-#about{
-    height: auto;
-}
-
-#about img{
-	object-fit: cover;
-	position: relative;
-    width: 100%;
-    height:600px;
-}
-
-
-
-
-#about-text {
-    height: auto;
-	color: white;
-	text-align: left;
-    position: absolute;
-    top: 0;
-
-    
-}
-
-#about-text h1 {
-	top: 110px;
-	font-size: 40px;
-	letter-spacing: 5px;
-}
-
-#about-text p {
-	top: 120px;
-	font-size: 15px;
-	letter-spacing: 5px;
-}
-
+	/* About starts here */
+	#about-text {
+		height: auto;
+		color: white;
+		text-align: left;
+	}
+	#about-text h1 {
+		font-size: 40px;
+		letter-spacing: 5px;
+	}
+	#about-text p {
+		font-size: 15px;
+		letter-spacing: 5px;
+	}
 }
 
 @media screen and (max-width: 767px) {
@@ -660,13 +616,6 @@ input[type=submit] {
 		font-size: 15px;
 		letter-spacing: 5px;
 	}
-    
-    #about img{
-	object-fit: cover;
-	position: relative;
-    width: 100%;
-    height:900px;
-}
 	/* Fixes a bootstrap padding and margin bug */
 	.row {
 		padding: 0;
@@ -675,17 +624,10 @@ input[type=submit] {
 }
 
 @media screen and (max-width: 576px) {
-    	.header-img {
+	.header-img {
 		width: 100%;
 		object-fit: cover;
 		position: relative;
 		height: 50vh;
 	}
-    
-    #about img{
-	object-fit: cover;
-	position: relative;
-    width: 100%;
-    height:1000px;
-}
 }
